[package]
name = "yaml-error"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.60"
yaml-rust = "0.4.3"
wasm-bindgen-futures = "0.4.10"
web-sys = { version = "0.3.37", features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "Headers", "console"] }
md5 = "0.7.0"
