[package]
name = "yaml-error"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.60"
yaml-rust = "0.4.3"
json = "0.12.4"
console_error_panic_hook = "0.1.6"
